--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,10 +19,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-    - name: Set up Python 3.10
+    - name: Set up Python 3.12    
       uses: actions/setup-python@v3
       with:
-        python-version: "3.10"
-    - name: Test with pytest
+        python-version: "3.12"
+    - name: Test
       run: |
         python test.py
